<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="@dimen/item_news_height"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="#4000"
    android:layout_margin="4dp"
    app:cardCornerRadius="8dp"
    android:theme="@style/Theme.MaterialComponents.DayNight.DarkActionBar"
    tools:context=".NewsListActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/item_news_height">

        <ImageView
            android:id="@+id/image_item"
            android:layout_width="match_parent"
            android:layout_height="@dimen/item_image_height"
            tools:src="@tools:sample/avatars"
            app:layout_constraintTop_toTopOf="parent"/>

        <TextView
            android:id="@+id/name_news"
            android:layout_width="match_parent"
            android:layout_height="@dimen/item_name_news_height"
            android:background="#A000"
            android:padding="@dimen/padding_text"
            android:text="@string/name_news"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_name"
            app:layout_constraintBottom_toBottomOf="@id/image_item"
            tools:ignore="RtlSymmetry" />

        <TextView
            android:id="@+id/text_news"
            android:layout_width="match_parent"
            android:layout_height="@dimen/item_text_news_height"
            android:text="@string/preview_news"
            android:textSize="@dimen/text_size"
            android:paddingStart="@dimen/padding_text"
            android:paddingTop="@dimen/padding_text"
            app:layout_constraintTop_toBottomOf="@id/image_item"/>

        <TextView
            android:id="@+id/date_news"
            android:layout_width="match_parent"
            android:layout_height="@dimen/item_date_news_height"
            android:text="@string/date_news"
            android:textSize="@dimen/text_size"
            android:paddingStart="@dimen/padding_text"
            app:layout_constraintTop_toBottomOf="@id/text_news"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

</com.google.android.material.card.MaterialCardView>