<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:theme="@style/Theme.MaterialComponents.DayNight.DarkActionBar">

    <RelativeLayout xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:context=".AboutActivity">

        <ImageView
            android:id="@+id/image_avatar"
            android:layout_width="match_parent"
            android:layout_height="@dimen/height_avatar"
            android:layout_marginBottom="@dimen/margin_bottom"
            android:src="@drawable/photo" />

        <ImageView
            android:id="@+id/image_tsc"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/key_height"
            android:layout_below="@+id/image_avatar"
            android:layout_marginStart="@dimen/margin_left_key"
            android:src="@drawable/tsc" />

        <TextView
            android:id="@+id/text_tsc"
            android:layout_width="match_parent"
            android:layout_height="@dimen/key_height"
            android:layout_below="@+id/image_avatar"
            android:layout_marginStart="@dimen/margin_left_image"
            android:layout_toEndOf="@+id/image_tsc"
            android:text="@string/text1"
            android:textSize="@dimen/text_size" />

        <ImageView
            android:id="@+id/image_mai"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/key_height"
            android:layout_below="@id/image_tsc"
            android:layout_marginStart="@dimen/margin_left_key"
            android:layout_marginTop="@dimen/margin_top_key"
            android:src="@drawable/school" />

        <TextView
            android:id="@+id/mai_text"
            android:layout_width="match_parent"
            android:layout_height="@dimen/key_height"
            android:layout_below="@id/text_tsc"
            android:layout_marginStart="@dimen/margin_left_image"
            android:layout_marginTop="@dimen/margin_top_key"
            android:layout_toEndOf="@id/image_mai"
            android:text="@string/text2"
            android:textSize="@dimen/text_size" />

        <ImageView
            android:id="@+id/image_sleep"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/key_height"
            android:layout_below="@id/image_mai"
            android:layout_marginStart="@dimen/margin_left_key"
            android:layout_marginTop="@dimen/margin_top_key"
            android:src="@drawable/sleep" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="@dimen/key_height"
            android:layout_below="@id/mai_text"
            android:layout_marginStart="@dimen/margin_left_image"
            android:layout_marginTop="@dimen/margin_top_key"
            android:layout_toEndOf="@id/image_sleep"
            android:text="@string/text3"
            android:textSize="@dimen/text_size" />

        <LinearLayout
            android:id="@+id/description_layout"
            android:layout_width="@dimen/description_width"
            android:layout_height="wrap_content"
            android:layout_below="@+id/image_sleep"
            android:layout_marginStart="@dimen/margin_left_key"
            android:layout_marginTop="@dimen/margin_top_key"
            android:orientation="vertical">

            <View
                android:layout_width="@dimen/description_width"
                android:layout_height="@dimen/top_separator"
                android:layout_marginTop="@dimen/margin_top_key"
                android:background="#F00" />

            <TextView
                android:id="@+id/description_text"
                android:layout_width="@dimen/description_width"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_top_key"
                android:paddingVertical="@dimen/margin_top_key"
                android:text="@string/text4"
                android:textSize="@dimen/text_size" />

            <View
                android:id="@+id/separator_bottom"
                android:layout_width="@dimen/description_width"
                android:layout_height="@dimen/top_separator2"
                android:layout_marginTop="@dimen/margin_top_key"
                android:background="#F00" />

            <EditText
                android:id="@+id/message"
                android:layout_width="@dimen/description_width"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_top_key"
                android:hint="@string/enter_message"
                android:textSize="@dimen/text_size"

                />

            <Button
                android:id="@+id/email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_marginTop="@dimen/margin_top_key"
                android:background="#0000"
                android:text="@string/send_message"
                android:textColor="#F00" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/description_layout"
            android:layout_centerInParent="true"
            android:layout_marginTop="@dimen/margin_top_key"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/telegram"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/ic_telegram" />

            <ImageButton
                android:id="@+id/instagram"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginStart="@dimen/margin_left_image"
                android:src="@drawable/ic_instagram" />

            <ImageButton
                android:id="@+id/vk"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginStart="@dimen/margin_left_image"
                android:src="@drawable/ic_vk" />

        </LinearLayout>


    </RelativeLayout>
</ScrollView>